triton_backend_sys/src/bindings.rs

extern "C" {
    #[doc = " Set the buffer attributes function for a response allocator object.\n The function will be called after alloc_fn to set the buffer attributes\n associated with the output buffer.\n\n The thread-safy requirement for buffer_attributes_fn is the same as other\n allocator callbacks.\n\n \\param allocator The response allocator object.\n \\param buffer_attributes_fn The function to call to get the buffer\n attributes information for an allocated buffer.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ResponseAllocatorSetBufferAttributesFunction(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        buffer_attributes_fn: TRITONSERVER_ResponseAllocatorBufferAttributesFn_t,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Set the query function to a response allocator object. Usually the\n function will be called before alloc_fn to understand what is the\n allocator's preferred memory type and memory type ID at the current\n situation to make different execution decision.\n\n The thread-safy requirement for query_fn is the same as other allocator\n callbacks.\n\n \\param allocator The response allocator object.\n \\param query_fn The function to call to query allocator's preferred memory\n type and memory type ID.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ResponseAllocatorSetQueryFunction(
        allocator: *mut TRITONSERVER_ResponseAllocator,
        query_fn: TRITONSERVER_ResponseAllocatorQueryFn_t,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete a response allocator.\n\n \\param allocator The response allocator object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_ResponseAllocatorDelete(
        allocator: *mut TRITONSERVER_ResponseAllocator,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Create a new message object from serialized JSON string.\n\n \\param message The message object.\n \\param base The base of the serialized JSON.\n \\param byte_size The size, in bytes, of the serialized message.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_MessageNewFromSerializedJson(
        message: *mut *mut TRITONSERVER_Message,
        base: *const ::std::os::raw::c_char,
        byte_size: usize,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete a message object.\n\n \\param message The message object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_MessageDelete(
        message: *mut TRITONSERVER_Message,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get the base and size of the buffer containing the serialized\n message in JSON format. The buffer is owned by the\n TRITONSERVER_Message object and should not be modified or freed by\n the caller. The lifetime of the buffer extends only as long as\n 'message' and must not be accessed once 'message' is deleted.\n\n \\param message The message object.\n \\param base Returns the base of the serialized message.\n \\param byte_size Returns the size, in bytes, of the serialized\n message.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_MessageSerializeToJson(
        message: *mut TRITONSERVER_Message,
        base: *mut *const ::std::os::raw::c_char,
        byte_size: *mut usize,
    ) -> *mut TRITONSERVER_Error;
}
pub const tritonserver_metricformat_enum_TRITONSERVER_METRIC_PROMETHEUS:
    tritonserver_metricformat_enum = 0;
#[doc = " Metric format types"]
pub type tritonserver_metricformat_enum = ::std::os::raw::c_uint;
#[doc = " Metric format types"]
pub use self::tritonserver_metricformat_enum as TRITONSERVER_MetricFormat;
extern "C" {
    #[doc = " Delete a metrics object.\n\n \\param metrics The metrics object.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_MetricsDelete(
        metrics: *mut TRITONSERVER_Metrics,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Get a buffer containing the metrics in the specified format. For\n each format the buffer contains the following:\n\n   TRITONSERVER_METRIC_PROMETHEUS: 'base' points to a single multiline\n   string (char*) that gives a text representation of the metrics in\n   prometheus format. 'byte_size' returns the length of the string\n   in bytes.\n\n The buffer is owned by the 'metrics' object and should not be\n modified or freed by the caller. The lifetime of the buffer\n extends only as long as 'metrics' and must not be accessed once\n 'metrics' is deleted.\n\n \\param metrics The metrics object.\n \\param format The format to use for the returned metrics.\n \\param base Returns a pointer to the base of the formatted\n metrics, as described above.\n \\param byte_size Returns the size, in bytes, of the formatted\n metrics.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_MetricsFormatted(
        metrics: *mut TRITONSERVER_Metrics,
        format: TRITONSERVER_MetricFormat,
        base: *mut *const ::std::os::raw::c_char,
        byte_size: *mut usize,
    ) -> *mut TRITONSERVER_Error;
}
#[doc = " Tracing disabled. No trace activities are reported."]
pub const tritonserver_tracelevel_enum_TRITONSERVER_TRACE_LEVEL_DISABLED:
    tritonserver_tracelevel_enum = 0;
#[doc = " Deprecated. Use TRITONSERVER_TRACE_LEVEL_TIMESTAMPS."]
pub const tritonserver_tracelevel_enum_TRITONSERVER_TRACE_LEVEL_MIN: tritonserver_tracelevel_enum =
    1;
#[doc = " Deprecated. Use TRITONSERVER_TRACE_LEVEL_TIMESTAMPS."]
pub const tritonserver_tracelevel_enum_TRITONSERVER_TRACE_LEVEL_MAX: tritonserver_tracelevel_enum =
    2;
#[doc = " Record timestamps for the inference request."]
pub const tritonserver_tracelevel_enum_TRITONSERVER_TRACE_LEVEL_TIMESTAMPS:
    tritonserver_tracelevel_enum = 4;
#[doc = " Record input and output tensor values for the inference request."]
pub const tritonserver_tracelevel_enum_TRITONSERVER_TRACE_LEVEL_TENSORS:
    tritonserver_tracelevel_enum = 8;
#[doc = " Trace levels. The trace level controls the type of trace\n activities that are reported for an inference request.\n\n Trace level values are power-of-2 and can be combined to trace\n multiple types of activities. For example, use\n (TRITONSERVER_TRACE_LEVEL_TIMESTAMPS |\n TRITONSERVER_TRACE_LEVEL_TENSORS) to trace both timestamps and\n tensors for an inference request.\n\n TRITONSERVER_TRACE_LEVEL_MIN and TRITONSERVER_TRACE_LEVEL_MAX are\n deprecated and should not be used."]
pub type tritonserver_tracelevel_enum = ::std::os::raw::c_uint;
#[doc = " Trace levels. The trace level controls the type of trace\n activities that are reported for an inference request.\n\n Trace level values are power-of-2 and can be combined to trace\n multiple types of activities. For example, use\n (TRITONSERVER_TRACE_LEVEL_TIMESTAMPS |\n TRITONSERVER_TRACE_LEVEL_TENSORS) to trace both timestamps and\n tensors for an inference request.\n\n TRITONSERVER_TRACE_LEVEL_MIN and TRITONSERVER_TRACE_LEVEL_MAX are\n deprecated and should not be used."]
pub use self::tritonserver_tracelevel_enum as TRITONSERVER_InferenceTraceLevel;
extern "C" {
    #[doc = " Get the string representation of a trace level. The returned\n string is not owned by the caller and so should not be modified or\n freed.\n\n \\param level The trace level.\n \\return The string representation of the trace level."]
    pub fn TRITONSERVER_InferenceTraceLevelString(
        level: TRITONSERVER_InferenceTraceLevel,
    ) -> *const ::std::os::raw::c_char;
}
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_REQUEST_START:
    tritonserver_traceactivity_enum = 0;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_QUEUE_START:
    tritonserver_traceactivity_enum = 1;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_COMPUTE_START:
    tritonserver_traceactivity_enum = 2;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_COMPUTE_INPUT_END:
    tritonserver_traceactivity_enum = 3;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_COMPUTE_OUTPUT_START:
    tritonserver_traceactivity_enum = 4;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_COMPUTE_END:
    tritonserver_traceactivity_enum = 5;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_REQUEST_END:
    tritonserver_traceactivity_enum = 6;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_TENSOR_QUEUE_INPUT:
    tritonserver_traceactivity_enum = 7;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_TENSOR_BACKEND_INPUT:
    tritonserver_traceactivity_enum = 8;
pub const tritonserver_traceactivity_enum_TRITONSERVER_TRACE_TENSOR_BACKEND_OUTPUT:
    tritonserver_traceactivity_enum = 9;
#[doc = " Trace activities"]
pub type tritonserver_traceactivity_enum = ::std::os::raw::c_uint;
#[doc = " Trace activities"]
pub use self::tritonserver_traceactivity_enum as TRITONSERVER_InferenceTraceActivity;
extern "C" {
    #[doc = " Get the string representation of a trace activity. The returned\n string is not owned by the caller and so should not be modified or\n freed.\n\n \\param activity The trace activity.\n \\return The string representation of the trace activity."]
    pub fn TRITONSERVER_InferenceTraceActivityString(
        activity: TRITONSERVER_InferenceTraceActivity,
    ) -> *const ::std::os::raw::c_char;
}
